--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ python:
   - "3.5"
   - "3.6"
   - "3.7-dev"
-install: python -m pip install --upgrade -r test-requirements.txt
-script: python -m pip install --upgrade -e . && python -m pytest --cov=pubmarine tests
+install:
+  python -m pip install --upgrade -r test-requirements.txt
+script:
+  python -m pip install --upgrade -e . && python -m pytest --cov=pubmarine tests
+after_success:
+  coveralls
