--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ include COPYING*
 include README*
 include NEWS
 include LICENSE
-include test-requirements.txt
+include *-requirements.txt
 include .coveragerc
 include examples/*
 recursive-include tests/* *.py
