--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: python
+sudo: required
+dist: xenial
 python:
   - "3.5"
   - "3.6"
-  - "3.7-dev"
+  - "3.7"
+  - "3.8-dev"
 install:
   python -m pip install --upgrade -r test-requirements.txt
 script:
-  python -m pip install --upgrade -e . && python -m pytest --cov=pubmarine tests
+  - python -m pip install --upgrade -e . && python -m pytest --cov=pubmarine tests
+  - python -m pip install --upgrade -e . && python -m mypy pubmarine
 after_success:
-  coveralls
+  - coveralls
+  - coverage xml && python-codacy-coverage -r coverage.xml
